--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -1,17 +1,60 @@
-.reg-form{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.reg-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 20px 0;
 }
 
-.reg-form-inputs{
-    margin: 10px;
+.reg-form-inputs {
+  margin: 10px;
 }
 
-.label-margin{
-    display: inline-block;
-    width: 180px;
-    text-align: right;
-    font-family: 'Fredoka One', cursive;
-    color: rgb(41, 79, 22);
+.label-margin {
+  display: inline-block;
+  width: 180px;
+  text-align: right;
+  font-family: "Fredoka One", cursive;
+  color: rgb(41, 79, 22);
+}
+
+.reg-footer {
+  display: flex;
+  justify-content: space-between;
+  margin: 25px 20px;
+}
+
+.signup-button {
+  font-family: "Fredoka One", cursive;
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #02887b, #3b5361);
+  background-image: -moz-linear-gradient(top, #02887b, #3b5361);
+  background-image: -ms-linear-gradient(top, #02887b, #3b5361);
+  background-image: -o-linear-gradient(top, #02887b, #3b5361);
+  background-image: linear-gradient(to bottom, #02887b, #3b5361);
+  border-radius: 2px;
+  color: #ffffff;
+  font-size: 15px;
+  padding: 10px 15px 10px 15px;
+  text-decoration: none;
+}
+
+.signup-button:hover {
+  background: #04b8a3;
+  background-image: -webkit-linear-gradient(top, #04b8a3, #818a91);
+  background-image: -moz-linear-gradient(top, #04b8a3, #818a91);
+  background-image: -ms-linear-gradient(top, #04b8a3, #818a91);
+  background-image: -o-linear-gradient(top, #04b8a3, #818a91);
+  background-image: linear-gradient(to bottom, #04b8a3, #818a91);
+  text-decoration: none;
+}
+
+.account-link {
+  font-family: "Fredoka One", cursive;
+  text-decoration: none;
+  color: #145e6c;
+  margin: 10px 0;
+}
+
+.account-link:hover{
+    color: #0589a7;
 }
