--- a/src/components/Learn/Learn.css
+++ b/src/components/Learn/Learn.css
@@ -33,7 +33,7 @@
     font-size: 20px;
     border: solid;
     padding: 15px;
-    background-color: bisque;
+    background-color: rgb(237, 233, 227);
     text-transform: capitalize;
     margin: 0 15px;
 }
