--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -70,3 +70,83 @@
 .account-link:hover{
     color: #0589a7;
 }
+
+@media all and (min-width: 800px) {
+
+  .reg-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: solid;
+    background-color: #cbcbcb;
+    width: 50%;
+    height: 400px;
+  }
+  
+  .reg-form-inputs {
+    width: 41%;
+  }
+  
+  .inputs{
+    display: flex;
+    margin-bottom: 10px;
+  }
+  
+  .label-margin {
+    display: inline-block;
+    text-align: left;
+    width: 200px;
+    font-family: "Fredoka One", cursive;
+    color: rgb(41, 79, 22);
+    font-size: 19px;
+    margin-right: 50px;
+  }
+  
+  .reg-footer {
+    display: flex;
+    justify-content: space-between;
+    margin: 25px 20px;
+  }
+  
+  .signup-button {
+    font-family: "Fredoka One", cursive;
+    background: #3498db;
+    background-image: -webkit-linear-gradient(top, #02887b, #3b5361);
+    background-image: -moz-linear-gradient(top, #02887b, #3b5361);
+    background-image: -ms-linear-gradient(top, #02887b, #3b5361);
+    background-image: -o-linear-gradient(top, #02887b, #3b5361);
+    background-image: linear-gradient(to bottom, #02887b, #3b5361);
+    border-radius: 2px;
+    color: #ffffff;
+    font-size: 18px;
+    padding: 10px 15px 10px 15px;
+    text-decoration: none;
+    width: 80%;
+    margin-top: 10px;
+  }
+  
+  .signup-button:hover {
+    background: #04b8a3;
+    background-image: -webkit-linear-gradient(top, #04b8a3, #818a91);
+    background-image: -moz-linear-gradient(top, #04b8a3, #818a91);
+    background-image: -ms-linear-gradient(top, #04b8a3, #818a91);
+    background-image: -o-linear-gradient(top, #04b8a3, #818a91);
+    background-image: linear-gradient(to bottom, #04b8a3, #818a91);
+    text-decoration: none;
+  }
+  
+  .account-link {
+    font-family: "Fredoka One", cursive;
+    text-decoration: none;
+    color: #145e6c;
+    margin:auto;
+    margin-left: 35px;
+    font-size: 18px;
+    margin-top: 10px;
+  }
+  
+  .account-link:hover{
+      color: #0589a7;
+  }
+}
