--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -8,7 +8,64 @@
   background-color: #cbcbcb;
 }
 
-.login-button{
+.login-button {
+  font-family: "Fredoka One", cursive;
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #02887b, #3b5361);
+  background-image: -moz-linear-gradient(top, #02887b, #3b5361);
+  background-image: -ms-linear-gradient(top, #02887b, #3b5361);
+  background-image: -o-linear-gradient(top, #02887b, #3b5361);
+  background-image: linear-gradient(to bottom, #02887b, #3b5361);
+  border-radius: 2px;
+  color: #ffffff;
+  font-size: 15px;
+  padding: 10px 15px 10px 15px;
+  text-decoration: none;
+  margin: auto;
+}
+
+.login-button:hover {
+  background: #04b8a3;
+  background-image: -webkit-linear-gradient(top, #04b8a3, #818a91);
+  background-image: -moz-linear-gradient(top, #04b8a3, #818a91);
+  background-image: -ms-linear-gradient(top, #04b8a3, #818a91);
+  background-image: -o-linear-gradient(top, #04b8a3, #818a91);
+  background-image: linear-gradient(to bottom, #04b8a3, #818a91);
+  text-decoration: none;
+}
+
+.label-width {
+  display: inline-block;
+  width: 120px;
+  text-align: left;
+  font-family: "Fredoka One", cursive;
+  color: rgb(41, 79, 22);
+  font-size: 15px;
+}
+
+.login-form-inputs {
+  width: 41%;
+}
+
+.login-inputs {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+@media all and (min-width: 800px) {
+  .LoginForm {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 0;
+    border: solid;
+    padding: 35px 20px;
+    background-color: #cbcbcb;
+    width: 30%;
+    height: 300px;
+  }
+
+  .login-button {
     font-family: "Fredoka One", cursive;
     background: #3498db;
     background-image: -webkit-linear-gradient(top, #02887b, #3b5361);
@@ -21,10 +78,11 @@
     font-size: 15px;
     padding: 10px 15px 10px 15px;
     text-decoration: none;
-    margin: auto; 
-}
+    margin: auto;
+    width: 50%;
+  }
 
-.login-button:hover{
+  .login-button:hover {
     background: #04b8a3;
     background-image: -webkit-linear-gradient(top, #04b8a3, #818a91);
     background-image: -moz-linear-gradient(top, #04b8a3, #818a91);
@@ -32,18 +90,24 @@
     background-image: -o-linear-gradient(top, #04b8a3, #818a91);
     background-image: linear-gradient(to bottom, #04b8a3, #818a91);
     text-decoration: none;
-}
+  }
 
-.label-width{
-  display: inline-block;
-  width: 120px;
-  text-align: left;
-  font-family: "Fredoka One", cursive;
-  color: rgb(41, 79, 22);
-  font-size: 15px
-}
+  .label-width {
+    display: inline-block;
+    width: 120px;
+    text-align: left;
+    font-family: "Fredoka One", cursive;
+    color: rgb(41, 79, 22);
+    font-size: 20px;
+  }
 
-.login-form-inputs{
-  margin: 10px;
-  width: 41%;
+  .login-form-inputs {
+    width: 41%;
+  }
+
+  .login-inputs {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+  }
 }
