--- a/src/components/Learn/Learn.css
+++ b/src/components/Learn/Learn.css
@@ -1,45 +1,45 @@
-.learn-section{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
- 
-.learn-main{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.learn-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.italian-word-div{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.learn-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.learn-h2{
-    font-family: 'Fredoka One', cursive;
-    text-decoration: none;
-    color: rgb(41, 79, 22);
-    margin: 15px;
+.italian-word-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.learn-span{
-    font-family: 'Fredoka One', cursive;
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    font-size: 20px;
-    border: solid;
-    padding: 15px;
-    background-color: rgb(237, 233, 227);
-    text-transform: capitalize;
-    margin: 0 15px;
+.learn-h2 {
+  font-family: "Fredoka One", cursive;
+  text-decoration: none;
+  color: rgb(41, 79, 22);
+  margin: 15px;
 }
 
-.score-div{
-    display: flex;
+.learn-span {
+  font-family: "Fredoka One", cursive;
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+  border: solid;
+  padding: 15px;
+  background-color: rgb(237, 233, 227);
+  text-transform: capitalize;
+  margin: 0 15px;
+}
+
+.score-div {
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin: 20px;
@@ -47,46 +47,213 @@
   border: solid;
   padding: 35px 20px;
   background-color: #cbcbcb;
-  width: 75%
+  width: 75%;
 }
 
-.learn-p{
-    font-family: 'Fredoka One', cursive;
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    margin: auto;
-    margin-bottom: 10px;
-    /* width: 90%; */
-    font-size: 15px;
-    line-height: 26px;
-    letter-spacing: 1px;
-    text-align: center;
+.learn-p {
+  font-family: "Fredoka One", cursive;
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  margin: auto;
+  margin-bottom: 10px;
+  /* width: 90%; */
+  font-size: 15px;
+  line-height: 26px;
+  letter-spacing: 1px;
+  text-align: center;
 }
 
-.learn-form{
+.learn-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.learn-label {
+  display: inline-block;
+  width: 230px;
+  text-align: center;
+  font-family: "Fredoka One", cursive;
+  color: rgb(41, 79, 22);
+  font-size: 17px;
+  margin-top: 15px;
+}
+
+.learn-input {
+  margin: 20px;
+  width: 180px;
+  height: 30px;
+}
+
+.learn-submit {
+  font-family: "Fredoka One", cursive;
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #02887b, #3b5361);
+  background-image: -moz-linear-gradient(top, #02887b, #3b5361);
+  background-image: -ms-linear-gradient(top, #02887b, #3b5361);
+  background-image: -o-linear-gradient(top, #02887b, #3b5361);
+  background-image: linear-gradient(to bottom, #02887b, #3b5361);
+  border-radius: 2px;
+  color: #ffffff;
+  font-size: 15px;
+  padding: 10px 15px 10px 15px;
+  text-decoration: none;
+  margin: auto;
+}
+
+.learn-submit:hover {
+  background: #04b8a3;
+  background-image: -webkit-linear-gradient(top, #04b8a3, #818a91);
+  background-image: -moz-linear-gradient(top, #04b8a3, #818a91);
+  background-image: -ms-linear-gradient(top, #04b8a3, #818a91);
+  background-image: -o-linear-gradient(top, #04b8a3, #818a91);
+  background-image: linear-gradient(to bottom, #04b8a3, #818a91);
+  text-decoration: none;
+}
+
+.DisplayScore {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.DisplayFeedback {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.feedback {
+  width: 80%;
+  text-align: center;
+  font-family: "Fredoka One", cursive;
+  color: rgb(22, 24, 21);
+}
+
+.correct-incorrect {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 15px;
+  border: dashed;
+}
+
+.incorrect {
+  width: 80%;
+  text-align: center;
+  font-family: "Fredoka One", cursive;
+  color: rgb(41, 79, 22);
+}
+
+.correct {
+  width: 80%;
+  text-align: center;
+  font-family: "Fredoka One", cursive;
+  color: rgb(44, 96, 115);
+}
+
+.line {
+  width: 50%;
+  height: 3px;
+  background-color: black;
+}
+
+@media all and (min-width: 800px) {
+  .learn-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
+  }
 
-.learn-label{
+  .learn-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .italian-word-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .learn-h2 {
+    font-family: "Fredoka One", cursive;
+    text-decoration: none;
+    color: rgb(41, 79, 22);
+    font-size: 30px;
+    margin: 15px;
+  }
+
+  .learn-span {
+    font-family: "Fredoka One", cursive;
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    font-size: 25px;
+    border: solid;
+    padding: 15px;
+    background-color: rgb(237, 233, 227);
+    text-transform: capitalize;
+    margin: 0 15px;
+  }
+
+  .score-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 20px;
+    margin-top: 10px;
+    border: solid;
+    padding: 35px 20px;
+    background-color: #cbcbcb;
+    width: 80%;
+  }
+
+  .learn-p {
+    font-family: "Fredoka One", cursive;
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    margin: auto;
+    margin-bottom: 10px;
+    font-size: 18px;
+    line-height: 26px;
+    letter-spacing: 1px;
+    text-align: center;
+  }
+
+  .learn-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .learn-label {
     display: inline-block;
-    width: 230px;
+    width: 250px;
     text-align: center;
     font-family: "Fredoka One", cursive;
     color: rgb(41, 79, 22);
-    font-size: 17px;
-    margin-top: 15px;
-}
+    font-size: 20px;
+    margin-top: 20px;
+  }
 
-.learn-input{
+  .learn-input {
     margin: 20px;
     width: 180px;
     height: 30px;
-}
+  }
 
-.learn-submit{
+  .learn-submit {
     font-family: "Fredoka One", cursive;
     background: #3498db;
     background-image: -webkit-linear-gradient(top, #02887b, #3b5361);
@@ -96,13 +263,13 @@
     background-image: linear-gradient(to bottom, #02887b, #3b5361);
     border-radius: 2px;
     color: #ffffff;
-    font-size: 15px;
+    font-size: 19px;
     padding: 10px 15px 10px 15px;
     text-decoration: none;
-    margin: auto; 
-}
+    margin: auto;
+  }
 
-.learn-submit:hover{
+  .learn-submit:hover {
     background: #04b8a3;
     background-image: -webkit-linear-gradient(top, #04b8a3, #818a91);
     background-image: -moz-linear-gradient(top, #04b8a3, #818a91);
@@ -110,57 +277,57 @@
     background-image: -o-linear-gradient(top, #04b8a3, #818a91);
     background-image: linear-gradient(to bottom, #04b8a3, #818a91);
     text-decoration: none;
-}
+  }
 
-.DisplayScore{
+  .DisplayScore {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 10px;
-}
+  }
 
-.DisplayFeedback{
+  .DisplayFeedback {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 10px;
-}
+  }
 
-.feedback {
+  .feedback {
     width: 80%;
     text-align: center;
     font-family: "Fredoka One", cursive;
     color: rgb(22, 24, 21);
-}
+  }
 
-.correct-incorrect{
+  .correct-incorrect {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 15px;
     border: dashed;
+  }
 
-}
-
-.incorrect{
+  .incorrect {
     width: 80%;
     text-align: center;
     font-family: "Fredoka One", cursive;
     color: rgb(41, 79, 22);
-}
+  }
 
-.correct {
+  .correct {
     width: 80%;
     text-align: center;
     font-family: "Fredoka One", cursive;
-    color: rgb(44, 96, 115)
-}
+    color: rgb(44, 96, 115);
+  }
 
-.line{
+  .line {
     width: 50%;
     height: 3px;
     background-color: black;
+  }
 }
